сделала выгрузку инфы по тестам, их надо по блокам распихать в шаблоне

--- a/educastick/teachersPage/templates/testDef.html
+++ b/educastick/teachersPage/templates/testDef.html
@@ -5,14 +5,23 @@
     <title>Title</title>
 </head>
 <body>
-    {{ test_info }}<br><br><br>
-    {{ module }}<br>
-    {{ test }}<br>
-    {{ question }}<br>
-    {{ questionVariantAnswer }}<br><br><br>
-    {% for r in result %}
-    {{ r }}<br><br>
-    {% endfor %}
+<!--    {{ test_info }}<br><br><br>-->
+<!--    {{ module }}<br>-->
+<!--    {{ test }}<br>-->
+<!--    {{ question }}<br>-->
+<!--    {{ questionVariantAnswer }}<br><br><br>-->
+{{result}}
+<!--    {{result.0.4.question.0.1}}<br><br><br>-->
+<!--{{result.0.4.question.0.3.wrong}}<br><br><br>-->
+<!--    {% for value in result.0.4.question.0.3.wrong %}-->
+<!--    {{value}}<br>-->
+<!--    {% endfor %}<br><br><br>-->
+<!--    {% for r in result %}-->
+<!--    {{ r }}<br><br>-->
+<!--    {% for cell in r %}-->
+<!--    {{cell}}<br>-->
+<!--    {% endfor %}-->
+<!--    {% endfor %}-->
 
 
 </body>
